--- a/org/_posts/2013-10/2013-10-17-搭建本地jekyll博客.org
+++ b/org/_posts/2013-10/2013-10-17-搭建本地jekyll博客.org
@@ -4,11 +4,11 @@ layout: post
 keywords: blog
 description: blog
 title: 搭建本地jekyll博客
-categories: [learning, jekyll,org-mode]
-tags: [jekyll]
+categories: [Emacs, blog]
+tags: [jekyll, org-mode]
 group: archive
 icon: globe
-featured: true
+featured: false
 ---
 #+END_HTML
 
