--- a/org/_posts/2013-10/2013-10-29-iptables.org
+++ b/org/_posts/2013-10/2013-10-29-iptables.org
@@ -233,3 +233,11 @@ iptables -A OUTPUT -o eth0 -p tcp --sport 80 -m state --state ESTABLISHED -j ACC
 
 
 [[http://www.thegeekstuff.com/2011/06/iptables-rules-examples/][25 Most Frequently Used Linux IPTables Rules Examples]]
+
+[[http://www.51rhca.com/archives/376][RHCA培训必备：浅谈iptables的防火墙]]
+
+[[https://help.ubuntu.com/community/IptablesHowTo][UbuntuIptablesHowTo]]
+
+[[http://oa.jmu.edu.cn/netoa/libq/pubdisc.nsf/66175841be38919248256e35005f4497/7762e8e1056be98f48256e88001ef71d?OpenDocument][用iptables实现NAT]]
+
+[[http://www.ibm.com/developerworks/cn/opensource/os-iptables/][iptables 的防火墙正常运行时间和安全性]]
