--- a/org/_posts/2013-10/2013-10-21-git-use.org
+++ b/org/_posts/2013-10/2013-10-21-git-use.org
@@ -3,15 +3,31 @@
 layout: post
 keywords: 
 description: 
-title: git常见错误 
+title: github常用操作和常见错误
 categories: [git]
-tags: [git,errors]
+tags: [git,proxy]
 group: archive
 icon: github
 featured: false
 ---
 #+END_HTML
-* error: RPC failed; result=55, HTTP code = 0
+* 常用操作
+** github使用http代理
+今天使用git clone和push的时候竟然出现error:Failed connect to github.com:443的错误，没办法只能使用goagent了。
+运行下面两条命令就ok了。
+#+BEGIN_SRC sh
+git config http.proxy http://127.0.0.1:8087/
+git config http.sslVerify false
+#+END_SRC
+之后在push就可以了。
+** 参考资料
+[[http://cloudaice.com/use-git/][use git]]
+
+话说这人博客风格我挺喜欢，回头fork
+** 克隆仓库的单个分支
+git clone -b <branch> <remote_repo> 
+* 常见错误
+** error: RPC failed; result=55, HTTP code = 0
 git push 提交的时候出现错误
 #+BEGIN_SRC sh
 error: RPC failed; result=55, HTTP code = 0
