--- a/org/_posts/2013-11/2013-11-19-openstack-havana-deploy.org
+++ b/org/_posts/2013-11/2013-11-19-openstack-havana-deploy.org
@@ -197,6 +197,7 @@ auth_protocol = http
 admin_tenant_name = service
 admin_user = glance
 admin_password = glance
+notifier_strategy = rabbit
 #+END_SRC
 修改/etc/glance/glance-registry.conf
 #+BEGIN_SRC sh
@@ -211,18 +212,7 @@ admin_tenant_name = service
 admin_user = glance
 admin_password = glance
 #+END_SRC
-** 同步数据库
-#+BEGIN_SRC sh
-glance-manage db_sync
-#+END_SRC
-
-** 创建名为glance的认证用户
-#+BEGIN_SRC sh
-keystone user-create --name=glance --pass=glance \
---email=glance@126.com
-keystone user-role-add --user=glance --tenant=service --role=admin
-#+END_SRC
-配置/etc/glance/glance-api-paste.ini和/etc/glance/glance-registry-paste.ini.两个文件都修改[filter:authtoken]部分如下:
+/etc/glance/glance-api-paste.ini
 #+BEGIN_SRC sh
 [filter:authtoken]
 paste.filter_factory=keystoneclient.middleware.auth_token:filter_factory
@@ -230,6 +220,25 @@ auth_host=172.16.0.254
 admin_user=glance
 admin_tenant_name=service
 admin_password=glance
+#+END_SRC
+/etc/glance/glance-registry-paste.ini
+#+BEGIN_SRC sh
+[filter:authtoken]
+paste.filter_factory=keystoneclient.middleware.auth_token:filter_factory
+auth_host=172.16.0.254
+admin_user=glance
+admin_tenant_name=service
+admin_password=glance
+#+END_SRC
+** 同步数据库
+#+BEGIN_SRC sh
+glance-manage db_sync
+#+END_SRC
+** 创建名为glance的认证用户
+#+BEGIN_SRC sh
+keystone user-create --name=glance --pass=glance \
+--email=glance@126.com
+keystone user-role-add --user=glance --tenant=service --role=admin
 #+END_SRC
 ** 创建service服务和endpoint
 #+BEGIN_SRC sh
@@ -300,8 +309,24 @@ auth_strategy=keystone
 rpc_backend = nova.rpc.impl_kombu
 rabbit_host = 172.16.0.254
 glance_host = 172.16.0.254
+
+instance_usage_audit=True
+instance_usage_audit_period=hour
+notify_on_state_change=vm_and_task_state
+notification_driver=nova.openstack.common.notifier.rpc_notifier
+notification_driver=ceilometer.compute.nova_notifier
 [database]
 connection = mysql://nova:nova@172.16.0.254/nova
+
+network_api_class=nova.network.neutronv2.api.API
+neutron_url=http://172.16.0.254:9696
+neutron_auth_strategy=keystone
+neutron_admin_tenant_name=service
+neutron_admin_username=neutron
+neutron_admin_password=neutron
+neutron_admin_auth_url=http://172.16.0.254:35357/v2.0
+firewall_driver=nova.virt.firewall.NoopFirewallDriver
+security_group_api=neutron
 #+END_SRC
 修该/etc/nova/api-paste.ini的[filter:authtoken]部分
 #+BEGIN_SRC sh
@@ -347,9 +372,370 @@ cd /etc/init.d/; for i in $( ls nova-* ); do sudo service $i restart; done
 #+BEGIN_SRC sh
 nova image-list
 #+END_SRC
+* 安装horizon
+#+BEGIN_SRC sh
+apt-get install memcached libapache2-mod-wsgi openstack-dashboard
+apt-get remove --purge openstack-dashboard-ubuntu-theme
+#+END_SRC
+* Block Storage (Cinder)安装
+** 安装服务
+#+BEGIN_SRC sh
+apt-get install cinder-api cinder-scheduler
+#+END_SRC
+** 创建数据库
+#+BEGIN_SRC sh
+mysql -u root -p
+mysql> CREATE DATABASE cinder;
+mysql> GRANT ALL PRIVILEGES ON cinder.* TO 'cinder'@'localhost' \
+IDENTIFIED BY 'cinder';
+mysql> GRANT ALL PRIVILEGES ON cinder.* TO 'cinder'@'%' \
+IDENTIFIED BY 'cinder';
+#+END_SRC
+** 建立一个逻辑卷卷组 cinder-volumes
+创建一个普通分区，我这里用的sdb，创建了一个主分区，大小为所有空间
+#+BEGIN_SRC sh
+apt-get install cinder-volume lvm2
+# fdisk /dev/sdb
+n
+p
+1
+Enter
+Enter
+t
+8e
+w
+# pvcreate /dev/sdb1
+# vgcreate cinder-volumes /dev/sdb1
+# vgs
+  VG             #PV #LV #SN Attr   VSize   VFree
+  cinder-volumes   1   0   0 wz--n- 150.00g 150.00g
+  localhost        1   2   0 wz--n- 279.12g  12.00m
+#+END_SRC
+** 修改配置文件
+/etc/cinder/cinder.conf
+#+BEGIN_SRC sh
+[database]
+...
+# The SQLAlchemy connection string used to connect to the
+# database (string value)
+connection = mysql://cinder:cinder@172.16.0.254/cinder
+...
+notification_driver = cinder.openstack.common.notifier.rabbit_notifier
+control_exchange = cinder
+#+END_SRC
+/etc/cinder/api-paste.ini
+#+BEGIN_SRC sh
+[filter:authtoken]
+paste.filter_factory=keystoneclient.middleware.auth_token:filter_factory
+auth_host=172.16.0.254
+auth_port = 35357
+auth_protocol = http
+admin_tenant_name = service
+admin_user = cinder
+admin_password = cinder
+#+END_SRC
+** 创建用户，角色，服务和endpoint
+#+BEGIN_SRC sh
+keystone user-create --name=cinder --pass=cinder --
+email=cinder@126.com
+keystone user-role-add --user=cinder --tenant=service --role=admin
+keystone service-create --name=cinder --type=volume \
+--description="Cinder Volume Service"
+keystone endpoint-create \
+--service-id=the_service_id_above \
+--publicurl=http://172.16.0.254:8776/v1/%\(tenant_id\)s \
+--internalurl=http://172.16.0.254:8776/v1/%\(tenant_id\)s \
+--adminurl=http://172.16.0.254:8776/v1/%\(tenant_id\)s
+keystone service-create --name=cinder --type=volumev2 \
+--description="Cinder Volume Service V2"
+keystone endpoint-create \
+--service-id=the_service_id_above \
+--publicurl=http://172.16.0.254:8776/v2/%\(tenant_id\)s \
+--internalurl=http://172.16.0.254:8776/v2/%\(tenant_id\)s \
+--adminurl=http://172.16.0.254:8776/v2/%\(tenant_id\)s
+#+END_SRC
+** 同步数据并重启服务
+#+BEGIN_SRC sh
+cinder-manage db sync
+service cinder-scheduler restart
+service cinder-api restart
+#+END_SRC
+** 检查
+#+BEGIN_SRC sh
+cinder list
+#+END_SRC
 * 安装和配置neutron
-* 其他
-hostname
+** 创建数据库
+#+BEGIN_SRC sh
+mysql -u root -p
+mysql> CREATE DATABASE neutron;
+mysql> GRANT ALL PRIVILEGES ON neutron.* TO 'neutron'@'localhost' \
+IDENTIFIED BY 'neutron';
+mysql> GRANT ALL PRIVILEGES ON neutron.* TO 'neutron'@'%' \
+IDENTIFIED BY 'neutron';
+#+END_SRC
+** 创建用户，服务和endpoint
+#+BEGIN_SRC sh
+keystone user-create --name=neutron --pass=neutron --
+email=neutron@126.com
+keystone user-role-add --user=neutron --tenant=service --role=admin
+keystone service-create --name=neutron --type=network \
+--description="OpenStack Networking Service"
+keystone endpoint-create \
+--service-id the_service_id_above \
+--publicurl http://172.16.0.254:9696 \
+--adminurl http://172.16.0.254:9696 \
+--internalurl http://172.16.0.254:9696
+#+END_SRC
+** 安装网络服务
+*** 安装neutron组件
+apt-get install neutron-server neutron-dhcp-agent neutron-plugin-
+openvswitch-agent neutron-l3-agent
+*** 打开ip_forward
+编辑/etc/sysctl.conf
+#+BEGIN_SRC sh
+net.ipv4.ip_forward=1
+net.ipv4.conf.all.rp_filter=0
+net.ipv4.conf.default.rp_filter=0
+#+END_SRC
+重启网络
+#+BEGIN_SRC sh
+sysctl -p
+service networking restart
+#+END_SRC
+*** 编辑配置文件
+编辑/etc/neutron/neutron.conf 
+#+BEGIN_SRC sh
+[DEFAULT]
+debug = True
+verbose = True
+[database]
+connection = mysql://neutron:neutron@172.16.0.254/neutron
+core_plugin = neutron.plugins.openvswitch.ovs_neutron_plugin.OVSNeutronPluginV2
+[keystone_authtoken]
+auth_host = 172.16.0.254
+auth_port = 35357
+auth_url = http://controller:35357/v2.0
+auth_strategy = keystone
+auth_protocol = http
+admin_tenant_name = service
+admin_user = neutron
+admin_password = neutron
+#+END_SRC
+编辑/etc/neutron/api-paste.ini
+#+BEGIN_SRC sh
+[filter:authtoken]
+paste.filter_factory = keystoneclient.middleware.auth_token:filter_factory
+auth_host=172.16.0.254
+auth_url=http://172.16.0.254:5000
+admin_user=neutron
+admin_tenant_name=service
+admin_password=neutron
+#+END_SRC
+编辑/etc/neutron/dhcp_agent.ini
+#+BEGIN_SRC sh
+dhcp_driver = neutron.agent.linux.dhcp.Dnsmasq
+use_namespaces = True
+interface_driver = neutron.agent.linux.interface.OVSInterfaceDriver
+#+END_SRC
+编辑/etc/neutron/l3_agent.ini
+#+BEGIN_SRC sh
+use_namespaces = True
+interface_driver = neutron.agent.linux.interface.OVSInterfaceDriver
+#+END_SRC
+** 安装ovs插件
+*** 安装
+apt-get install neutron-plugin-openvswitch-agent openvswitch-switch
+*** 网络配置
+**** 建立网桥
+ovs-vsctl add-br br-int
+ovs-vsctl add-br br-ex
+ovs-vsctl add-port br-ex eth0
+**** 编辑配置/etc/network/interfaces
+#+BEGIN_SRC sh
+auto lo
+iface lo inet loopback
 
-ntp
+auto eth1
+iface eth0 inet static
+        address 172.16.0.254
+        netmask 255.255.255.0
+
+auto eth0
+iface eth0 inet manual
+        up ifconfig $IFACE 0.0.0.0 up
+        down ifconfig $IFACE down
+
+auto br-ex
+iface br-ex inet static
+        address 192.168.150.8
+        netmask 255.255.255.0
+        gateway 192.168.8.1
+        dns-nameservers 8.8.8.8
+#+END_SRC
+****重启网络
+#+BEGIN_SRC sh
+ifconfig eth0 0
+/etc/init.d/networking restart
+#+END_SRC
+*** 编辑配置文件
+编辑/etc/neutron/plugins/openvswitch/ovs_neutron_plugin.ini
+#+BEGIN_SRC sh
+[securitygroup]
+# Firewall driver for realizing neutron security group function.
+firewall_driver = neutron.agent.linux.iptables_firewall.OVSHybridIptablesFirewallDriver
+[ovs]
+tenant_network_type = gre
+tunnel_id_ranges = 1:1000
+enable_tunneling = True
+integration_bridge = br-int
+tunnel_bridge = br-tun
+local_ip = 172.16.0.254
+#+END_SRC
+** 重启服务
+#+BEGIN_SRC sh
+cd /etc/init.d/; for i in $( ls neutron-* ); do sudo service $i restart; done
+#+END_SRC
+* Orchestration Server(Heat)安装
+** 安装
+#+BEGIN_SRC sh
+apt-get install heat-api heat-api-cfn heat-engine
+#+END_SRC
+** 创建数据库
+#+BEGIN_SRC sh
+mysql -u root -p
+mysql> CREATE DATABASE heat;
+mysql> GRANT ALL PRIVILEGES ON heat.* TO 'heat'@'localhost' \
+IDENTIFIED BY 'heat';
+mysql> GRANT ALL PRIVILEGES ON heat.* TO 'heat'@'%' \
+IDENTIFIED BY 'heat';
+#+END_SRC
+** 编辑配置文件
+/etc/heat/heat.conf
+#+BEGIN_SRC sh
+verbose = True
+log_dir=/var/log/heat
+[database]
+# The SQLAlchemy connection string used to connect to the database
+connection = mysql://heat:heat@172.16.0.254/heat
+#+END_SRC
+/etc/heat/api-paste.ini
+#+BEGIN_SRC sh
+[filter:authtoken]
+paste.filter_factory = heat.common.auth_token:filter_factory
+auth_host = 172.16.0.254
+auth_port = 35357
+auth_protocol = http
+admin_tenant_name = service
+admin_user = heat
+admin_password = heat
+#+END_SRC
+** 同步数据
+#+BEGIN_SRC sh
+heat-manage db_sync
+#+END_SRC
+** 创建用户和角色
+#+BEGIN_SRC sh
+keystone user-create --name=heat --pass=heat --email=heat@126.
+com
+keystone user-role-add --user=heat --tenant=service --role=admin
+#+END_SRC
+** 创建服务和endpoint
+#+BEGIN_SRC sh
+keystone service-create --name=heat --type=orchestration \
+--description="Heat Orchestration API"
+keystone endpoint-create \
+--service-id=the_service_id_above \
+--publicurl=http://172.16.0.254:8004/v1/\$(tenant_id)s \
+--internalurl=http://172.16.0.254:8004/v1/\$(tenant_id)s \
+--adminurl=http://172.16.0.254:8004/v1/\$(tenant_id)s
+keystone service-create --name=heat-cfn --type=cloudformation \
+--description="Heat CloudFormation API"
+keystone endpoint-create \
+--service-id=the_service_id_above \
+--publicurl=http://172.16.0.254:8000/v1 \
+--internalurl=http://172.16.0.254:8000/v1 \
+--adminurl=http://172.16.0.254:8000/v1
+#+END_SRC
+** 重启服务
+#+BEGIN_SRC sh
+cd /etc/init.d/; for i in $( ls heat-* ); do sudo service $i restart; done
+#+END_SRC
+** 创建和管理stacks
+从模板创建一个stack,其实官方已经提供很多模板，所以暂时先git下来做测试
+#+BEGIN_SRC sh
+git clone https://github.com/openstack/heat-templates.git
+#+END_SRC
+创建stack
+#+BEGIN_SRC sh
+heat stack-create mystack \
+--template-file=/root/heat-templates/cfn/F18/WordPress_Single_Instance.template \
+--parameters="InstanceType=m1.large;DBUsername=wordpress;DBPassword=wordpress;KeyName=HEAT_KEY;LinuxDistribution=F18"
+#+END_SRC
+具体参数请参与官方手册
+* Metering/Monitoring Server（Ceilometer）安装
+** 安装
+安装服务
+#+BEGIN_SRC sh
+apt-get install ceilometer-api ceilometer-collector ceilometer-agent-
+central python-ceilometerclient ceilometer-agent-compute
+#+END_SRC
+安装MongoDB Orchestration 服务使用数据库来存储信息，此示例使用MongoDB数据库
+#+BEGIN_SRC sh
+apt-get install mongodb
+#+END_SRC
+** 创建数据库
+#+BEGIN_SRC sh
+mongo
+> use ceilometer
+> db.addUser( { user: "ceilometer",
+pwd: "ceilometer",
+roles: [ "readWrite", "dbAdmin" ]
+} )
+#+END_SRC
+** 修改配置文件
+生成token
+#+BEGIN_SRC sh
+openssl rand -hex 10
+f81c8488ee940357e26c
+#+END_SRC
+/etc/ceilometer/ceilometer.conf
+#+BEGIN_SRC sh
+[database]
+...
+# The SQLAlchemy connection string used to connect to the
+# database (string value)
+connection = mongodb://ceilometer:CEILOMETER_DBPASS@controller:27017/ceilometer
+[publisher_rpc]
+...
+# Secret value for signing metering messages (string value)
+metering_secret = f81c8488ee940357e26c
+...
+[keystone_authtoken]
+auth_host = 172.16.0.254
+auth_port = 35357
+auth_protocol = http
+admin_tenant_name = service
+admin_user = ceilometer
+admin_password = ceilometer
+#+END_SRC
+** 创建用户，角色，服务和endpoint
+#+BEGIN_SRC sh
+keystone user-create --name=ceilometer --pass=CEILOMETER_PASS --
+email=ceilometer@126.com
+keystone user-role-add --user=ceilometer --tenant=service --role=admin
+keystone service-create --name=ceilometer --type=metering \
+--description="Ceilometer Metering Service"
+keystone endpoint-create \
+--service-id=the_service_id_above \
+--publicurl=http://172.16.0.254:8777/ \
+--internalurl=http://172.16.0.254:8777/ \
+--adminurl=http://172.16.254:8777/
+#+END_SRC
+** 重启服务
+#+BEGIN_SRC sh
+cd /etc/init.d/; for i in $( ls ceilometer-* ); do sudo service $i restart; done
+#+END_SRC
+* 其他
+
 
